SQl good. add Sepulc Page, Shop page etc

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,8 @@ spring.messages.basename=lang/messages
 
 spring.web.resources.static-locations=classpath:/spring-frontend/
 spring.thymeleaf.prefix=classpath:/spring-frontend/
+
+
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.show-sql=true
