Добавлена регистрация (без авторизации) и страница со списком купленных товаров. Так же заметил, что от меня просят не интернет магазин, а именно CRM. мда...

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,6 @@ spring.thymeleaf.prefix=classpath:/spring-frontend/
 #spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.show-sql=true
+
+spring.security.user.name=user
+spring.security.user.password=1 
