--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,14 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>3.1.2</version>
+        </dependency>
+
+
+
     </dependencies>
 
     <build>
